--- a/InertialNavigationSystem/InertialNavigationSystem.csproj
+++ b/InertialNavigationSystem/InertialNavigationSystem.csproj
@@ -64,6 +64,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Filter.cs" />
+    <Compile Include="FIRFilter.cs" />
     <Compile Include="Integrator.cs" />
     <Compile Include="Sample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
