Added FIR filter.

--- a/InertialNavigationSystem-Test/InertialNavigationSystem-Test.csproj
+++ b/InertialNavigationSystem-Test/InertialNavigationSystem-Test.csproj
@@ -44,7 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IntegratorTest.cs" />
+    <Compile Include="FIRFilter-Test.cs" />
+    <Compile Include="Integrator-Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
