--- a/InertialNavigationSystem/InertialNavigationSystem.csproj
+++ b/InertialNavigationSystem/InertialNavigationSystem.csproj
@@ -64,9 +64,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Filter.cs" />
+    <Compile Include="AlphaBetaFilter.cs" />
     <Compile Include="FIRFilter.cs" />
     <Compile Include="Integrator.cs" />
+    <Compile Include="IFilter.cs" />
     <Compile Include="Sample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
