Added Alpha Beta filter.

--- a/InertialNavigationSystem-Test/InertialNavigationSystem-Test.csproj
+++ b/InertialNavigationSystem-Test/InertialNavigationSystem-Test.csproj
@@ -44,8 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlphaBetaFilter-Test.cs" />
     <Compile Include="FIRFilter-Test.cs" />
     <Compile Include="Integrator-Test.cs" />
+    <Compile Include="MadgwickAHRS-Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
