Implemented SmartAlphaBeta filter. Demo is under construction.

--- a/InertialNavigationSystem-Test/InertialNavigationSystem-Test.csproj
+++ b/InertialNavigationSystem-Test/InertialNavigationSystem-Test.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Integrator-Test.cs" />
     <Compile Include="MadgwickAHRS-Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmartAlphaBetaFilter-Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
